--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 id="testimony"
                 class="form-control2"
                 style="margin-bottom: 10%"
-                placeholder="What’s your conviction?"
+                placeholder="What’s your resolve?"
                 maxlength="115"
                 required
               ></textarea>
