--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>GBS DP Generator</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <link
       rel="stylesheet"
       src="//normalize-css.googlecode.com/svn/trunk/normalize.css"
